src/client/style.css
:root {
    --saturation-factor: 1;
    --background-primary: hsl(209, 13%, 40%);
    --background-secondary: hsl(210, 13%, 30%);
    --background-tertiary: hsl(210, 13%, 20%);
    --background-tertiary-alt: hsl(210, 13%, 19%);
    --background-titlebar: hsl(210, 13%, 14%);
    --background-accent: hsl(210, 13%, 50%);
    --background-gutter: hsl(210, 13%, 60%);
    
    --background-hitbox: green;
    --background-hitbox: none;

    --text-normal: #fafaff;
    --error: #cd5c5c;

    --control-point-stroke: #f5fffa;
    --control-point-line-stroke: #74ecb0;
}

html,
body {
    font-family: Arial, Helvetica, sans-serif;
    background-color: var(--background-primary);
    color: var(--text-normal);
    margin: 0;
}

div.app {
    height: 100vh;
    width: 100vw;
    display: grid;
    grid-template-rows: auto 1fr;
}

div.titlebar {
    background-color: var(--background-titlebar);
    padding: 1.2ex;
}

div.mainsplitgrid {
    display: grid;
    grid-template-columns: 20% 1px 1fr 1px 20%;
    grid-template-rows: 65% 1px 35%;
    overflow: hidden;
}

div.bottom {
    grid-column: 1 / -1;
    background-color: var(--background-primary);

    display: grid;
    grid-template-columns: 25% 75%;
}

div.left,
div.right,
div.bottom {
    background-color: var(--background-secondary);
}

div.center {
    background-color: var(--background-tertiary);
    display: flex;
    justify-content: center;
    align-items: center;
}

div.konvastagecontainer {
    position: relative;
    overflow: hidden;
}
div.konvastage {
    position: absolute;
}

div#patternstage {
    background-color: var(--background-tertiary-alt);
}

div.timeline {
    background-color: var(--background-tertiary);
}

div#timelinestage {
    background-color: var(--background-tertiary-alt);
}

div.gutter {
    background-color: var(--background-gutter);
    position: relative;
}

div.gutter::after {
    background-color: var(--background-hitbox);
    display: block;
    content: "";
    width: 100%;
    height: 100%;
    position: relative;
    z-index: 50;
}

div.gutter.column::after {
    width: 8px;
    left: -4px;
}

div.gutter.row::after {
    height: 8px;
    top: -4px;
}

div.gutter.column {
    cursor: col-resize;
}

div.gutter.row {
    cursor: row-resize;
}

div.gutter.topbottom {
    grid-column: 1 / -1;
}

